# runahead

./: LICENSE  README.md  pyproject.toml
docs/specs/: 2026-07-10-runahead-design.md
runahead/: __init__.py  action.py  beta.py  budget.py  cli.py  executor.py  policy.py  predictor.py  queue.py  safety.py  scheduler.py  simulate.py  store.py  workspace.py  worktree.py
tests/: test_convergence.py  test_core.py  test_queue_conflict.py  test_tokens.py  test_workspace.py
