[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runahead"
version = "0.1.0"
description = "Speculative parallel execution for coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
runahead = "runahead.cli:main"

[tool.setuptools.packages.find]
include = ["runahead*"]
